# MultiAgent-Unreal

./: .gitattributes  .gitignore  .lldbinit  AGENTS.md  COMPLETE_ARCHITECTURE_ANALYSIS.md  README.md  bstart.sh  bstart_linux.sh  compile.sh  example_compile.sh  example_linux_compile_and_start.sh  example_mac_compile_and_start.sh  example_start.sh  example_start_linux.sh  example_start_mac.sh  generate_env_config.py  load_env.py  mac_compile_and_start.sh  main.py  mkdocs.yml  prompt_code_style.md  prompt_code_style.py  pyproject.toml  relatedwork.md  requirements.txt  start.sh
agent/: __init__.py  actor.py  agent.py  agent_manager.py  entity_graph.py  transform.py
asset/: scene_objects_config.json  task_planning_assets.json  unreal_asset_manager.py  unrealzoo_assets.json  utoc_index.json  utoc_index_available.json
config/: README.md  SimConfig.json  agents.json  agents_cybercity.json  agents_downtown.json  config.yaml  config_manager.py  config_parameter.yaml  environment.json  environment_downtown.json  simulation.json
datasets/: plans.json  pool_response_examples.json  pool_response_format.json  pool_response_format.md  query_all_entities.json  query_all_results.json  query_all_robots.json  query_boundaries.json  query_world_state.json  response_example.json  scene_graph.json  skill_allocation_example.json  world_model_example.py
doc/: 20251220_jump.md  20251220_place.md  ARCHITECTURE.md  COMMUNICATION_PROTOCOL.md  DEBUG.md  EnvLists.md  HF_CONTENT_MANAGEMENT.md  KEYBINDINGS.md  PLATFORM_ARCHITECTURE.md  PYTHON_ENVIRONMENT.md  README.md  REQUIREMENTS_ANALYSIS.md  (+19 more)
(+5414 files in other folders)
